<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="created_at">Created at</string>
    <string name="image_format">Image format</string>
    <string name="save">Save</string>
    <string name="draw">Draw</string>
    <string name="filter">Filter</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="im_a_guest">Im a guest</string>
    <string name="permission_to_write">Permission to write to the device memory has not been granted</string>
    <string name="settings_saved">Settings saved</string>
    <string name="photo_edit">Photo Edit</string>
    <string name="editback">EditBack</string>
    <string name="editforvard">EditForvard</string>
    <string name="crop">Crop</string>
    <string name="photo_filter">Photo Filter</string>
    <string name="photo_draw">Photo Draw</string>
    <string name="photo_view">Photo View</string>
    <string name="user_info">User Info</string>
    <string name="settings">Settings</string>
    <string name="brush">Brush</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="eraser">Eraser</string>
    <string name="theme">Theme</string>
    <string name="columns">Columns</string>
    <string name="show_dates">Show dates</string>
    <string name="yes">Yes</string>
    <string name="logo">Logo</string>
    <string name="func_not_available">This function is not available in this mode</string>
    <string name="no">No</string>
    <string name="want_to_delete">Are you sure you want to delete the selected photos?</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="no_photos_selected">No photos selected</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_saving_image">Error saving image</string>
    <string name="image_saved">"Image saved"</string>
    <string name="the_photo_is_already_on_your_device">The photo is already on your device</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_photo_url">Enter Photo URL</string>
    <string name="from_internet">From Internet</string>
    <string name="from_device">From Device</string>
    <string name="choose_photo_source">Choose Photo Source</string>
    <string name="take_photo">Take photo</string>
    <string name="all">All</string>
    <string name="my">My</string>
    <string name="general">General</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_brush_size">Choose brush size</string>
    <string name="text">Text</string>
    <string name="error">Fill all fields</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_credential">The supplied auth credential is incorrect, malformed or has expired</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_user_disabled">User account has been disabled</string>
    <string name="error_user_not_found">No user record found for the given email</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_email_already_in_use">Email address is already in use by another account</string>
    <string name="error_weak_password">Weak password</string>
    <string name="error_network_request_failed">Network request failed</string>
    <string name="loading">Loading</string>
    <string name="filter_image">Filter image</string>
    <string name="image">Image</string>
    <string-array name="image_format">
        <item>png</item>
        <item>jpg</item>
    </string-array>
    <string-array name="themes">
        <item>Dark</item>
        <item>Light</item>
        <item>System</item>
    </string-array>
    <string-array name="columns">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="show_dates">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Black</item>
        <item>White</item>
    </string-array>
</resources>