<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPhotoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Основной контейнер для элементов интерфейса -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Верхняя панель -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                app:titleTextColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="16dp" >

                    <ImageButton
                        android:id="@+id/buttonBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_arrow_back"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_marginStart="8dp"/>

                    <TextView
                        android:id="@+id/textViewCreatedAt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:text="@string/photo_edit"
                        android:textColor="@color/onPrimary"
                        android:textStyle="bold"/>

                    <ImageButton
                        android:id="@+id/buttonEditBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/editback"
                        android:src="@drawable/ic_reply"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_marginStart="8dp" />

                    <ImageButton
                        android:id="@+id/buttonEditForvard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/editforvard"
                        android:src="@drawable/ic_reply"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_marginStart="8dp"
                        android:scaleX="-1"/>

                    <ImageButton
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/save"
                        android:src="@drawable/ic_save"
                        android:background="?attr/selectableItemBackgroundBorderless"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <!-- Основная часть -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ja.burhanrashid52.photoeditor.PhotoEditorView
                    android:id="@+id/photoEditorView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside" />
            </LinearLayout>

            <!-- Нижняя панель с кнопками -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/buttonCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/crop"
                    android:src="@drawable/ic_crop"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>