<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!-- Основной контейнер для элементов интерфейса -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Верхняя панель -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            app:titleTextColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp">

                <ImageButton
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_arrow_back"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/onPrimary"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <!-- Контейнер для полей отображения данных пользователя -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Контейнер для выбора формата изображений -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_format"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/onBackground" />

                <Spinner
                    android:id="@+id/spinnerImageFormat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/image_format"
                    android:textColor="@color/onBackground" />
            </LinearLayout>

            <!-- Контейнер для выбора темы -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/onBackground" />

                <Spinner
                    android:id="@+id/spinnerTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/themes"
                    android:textColor="@color/onBackground" />
            </LinearLayout>

            <!-- Контейнер для выбора количества элементов в строке -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/columns"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/onBackground" />

                <Spinner
                    android:id="@+id/spinnerColumns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/columns"
                    android:textColor="@color/onBackground" />
            </LinearLayout>

            <!-- Контейнер для выбора показа дат -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_dates"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/onBackground" />

                <Spinner
                    android:id="@+id/spinnerShowDates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/show_dates"
                    android:textColor="@color/onBackground" />
            </LinearLayout>

            <!-- Кнопка для сохранения настроек -->
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>