<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoActivity"
    android:background="@color/background">

    <!-- Основной контейнер для элементов интерфейса -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Верхняя панель с кнопкой "Назад" -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            app:titleTextColor="@android:color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp" >

                <TextView
                    android:id="@+id/textViewCreatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"/>

                <ImageButton
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back"
                    android:src="@android:drawable/ic_menu_revert" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <!-- Основная часть -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:gravity="center_vertical">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/photoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <!-- Нижняя панель с кнопками "Рисовать", "Фильтр" и "Изменить" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <!-- Кнопка "Рисовать" -->
            <Button
                android:id="@+id/buttonDraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw"
                android:layout_marginEnd="16dp" />

            <!-- Кнопка "Фильтр" -->
            <Button
                android:id="@+id/buttonilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:layout_marginEnd="16dp" />

            <!-- Кнопка "Изменить" -->
            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_marginEnd="16dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>